Get MVP working

--- a/html/index.html
+++ b/html/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><script type="module">import init, {} from './web-panic.js';init('./web-panic_bg.wasm');</script></head><body></body></html>
+<!DOCTYPE html><html><head><script type="module">import init, {} from './example.js';init('./example_bg.wasm');</script></head><body></body></html>
